--- a/packages/editor-ui/src/plugins/i18n/locales/en.json
+++ b/packages/editor-ui/src/plugins/i18n/locales/en.json
@@ -16,6 +16,7 @@
 	"_reusableBaseText.unlimited": "Unlimited",
 	"_reusableBaseText.activate": "Activate",
 	"_reusableBaseText.error": "Error",
+	"_brand.name": "Revenue.io",
 	"generic.any": "Any",
 	"generic.cancel": "Cancel",
 	"generic.confirm": "Confirm",
@@ -47,11 +48,11 @@
 	"generic.workflow": "Workflow",
 	"generic.workflowSaved": "Workflow changes saved",
 	"generic.editor": "Editor",
-	"about.aboutN8n": "About n8n",
+	"about.aboutN8n": "About @:_brand.name",
 	"about.close": "Close",
 	"about.license": "License",
 	"about.n8nLicense": "Sustainable Use License + n8n Enterprise License",
-	"about.n8nVersion": "n8n Version",
+	"about.n8nVersion": "@:_brand.name Version",
 	"about.sourceCode": "Source Code",
 	"about.instanceID": "Instance ID",
 	"askAi.dialog.title": "'Ask AI' is almost ready",
@@ -589,7 +590,7 @@
 	"genericHelpers.secShort": "s",
 	"genericHelpers.showMessage.message": "Executions are read-only. Make changes from the <b>Workflow</b> tab.",
 	"genericHelpers.showMessage.title": "Cannot edit execution",
-	"mainSidebar.aboutN8n": "About n8n",
+	"mainSidebar.aboutN8n": "About @:_brand.name",
 	"mainSidebar.confirmMessage.workflowDelete.cancelButtonText": "",
 	"mainSidebar.confirmMessage.workflowDelete.confirmButtonText": "Yes, delete",
 	"mainSidebar.confirmMessage.workflowDelete.headline": "Delete Workflow?",
